# todo_fast_api

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: __init__.py  auth.py  todos.py  users.py
app/core/: config.py  security.py
app/db/: __init__.py  base.py
app/models/: todo.py  user.py
app/schemas/: __init__.py  todo.py  user.py
app/services/: __init__.py  todo.py  user.py
